--- a/register/login/templates/registration/login.html
+++ b/register/login/templates/registration/login.html
@@ -1,9 +1,18 @@
 {% extends 'registration/layout.html' %}
 {% block body %}
-<form action="{% url 'login' %}" method="post">
-    {% csrf_token %}
-    <input type="text" name="username" placeholder="Username">
-    <input type="password" name="password" placeholder="Password">
-    <input type="submit" value="Login">
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8">
+            <div class="card">
+                <form action="{% url 'login' %}" method="post" class="box">
+                    {% csrf_token %}
+                    <h1>Login</h1>
+                    <input type="text" name="username" placeholder="Username">
+                    <input type="password" name="password" placeholder="Password">
+                    <input type="submit" name="" value="Login" href="#">
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
