--- a/register/course/templates/course/course_list.html
+++ b/register/course/templates/course/course_list.html
@@ -26,7 +26,7 @@
                 <p>Status : <span class="open"> Open </span></p>
                 <form method="post" action = "{% url 'add'%}" id="myForm">
                     {% csrf_token %}
-                    <input type="hidden" name="course_name" value="{{ course.course_name }}">
+                    <input type="hidden" name="course_id" value="{{ course.course_id }}">
                     {{ form.as_p }}
                     <!-- <button type="submit" >submit</button> -->
                     {% if course.course_id in subject%}
