--- a/register/login/templates/registration/login.html
+++ b/register/login/templates/registration/login.html
@@ -11,6 +11,9 @@
                     <input type="password" name="password" placeholder="Password">
                     <input type="submit" name="" value="Login" href="#">
                 </form>
+                {% if error_message %}
+                    {{error_message}}
+                {% endif %} 
             </div>
         </div>
     </div>
